# SimpleFtpServer

./: CClient.cpp  CClient.h  CFtpClient.py  CFtpCommand.cpp  CFtpCommand.h  CFtpTransfer.cpp  CFtpTransfer.h  CMakeLists.txt  CManageClient.cpp  CManageClient.h  CPasvDataTransfer.cpp  CPasvDataTransfer.h  CPortDataTransfer.cpp  CPortDataTransfer.h  CThread.cpp  CThread.h  CTransfer.cpp  CTransfer.h  Common.cpp  Common.h  README.md  allow_deny.config  main.cpp  user_info.config
